# KineticCore

./: .gitignore  CMakeLists.txt  main.cpp
assets/shaders/: ground.frag  ground.vert  particle.frag  particle.vert
include/: Camera.h  Particle.h  ParticleSystem.h  Shader.h
src/: Camera.cpp  ParticleSystem.cpp  Shader.cpp  main.cpp
